Created the sidebar

--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Electron boilerplate</title>
+		<title>Bruit</title>
 		<link rel="stylesheet" href="index.css">
 	</head>
 	<body>
+        <div class="sidebar">
+        </div>
+
 		<div class="container">
 			<header>
 				<h1>Electron boilerplate</h1>
