--- a/index.html
+++ b/index.html
@@ -14,13 +14,37 @@
 			<h1>Categories</h1>
 		</div>
 		<div id="feeds">
-			<div class="feed"></div>
+			<div class="feed" onclick="previewInMainPanel(this)"></div>
 		</div>
 
 		<div id="preview"></div>
 		<section class="main"></section>
 		<footer></footer>
 	</div>
+	
+	<script>
+		let url = 'http://daringfireball.net/feeds/articles';
+
+		feednami.load(url, (result) => {
+			if (result.error) {
+				console.log(result.error);
+			} 
+			else {
+				let entries = result.feed.entries;
+				let feeds = document.getElementById('feeds');
+				for (let i = 0; i < entries.length; i++) {
+					let entry = entries[i];
+					let div = document.createElement('feed');
+					div.className = 'feed';
+					div.onclick = previewInMainPanel;
+					div.setAttribute("link", entries[i].link);
+					div.innerHTML = '<h1>' + entries[i].title;
+					feeds.appendChild(div);
+				}
+			}
+		});
+	</script>
+	
 </body>
-<script src="rss.js"></script>
+
 </html>
