Added some css when clicking on different rss posts

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>Bruit</title>
 	<link rel="stylesheet" href="index.css">
 	<script src="https://cdn.rawgit.com/sekando/feednami-client/master/releases/1.0.2.min.js"></script>
+	<script src="feed.js"></script>
 </head>
 
 <body>
