--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<div class="feed" onclick="previewInMainPanel(this)"></div>
 		</div>
 
-		<webview id="preview" src="about:blank" useragent="Mozilla/5.0 (iPhone; U; CPU like Mac OS X; en) AppleWebKit/420+ (KHTML, like Gecko) Version/3.0 Mobile/1A543a Safari/419.3"></webview>
+		<webview id="preview" src="about:blank" useragent="Mozilla/5.0 (Linux; Android 6.0.1; LG-D801 Build/MOB30R) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/52.0.2743.91 Mobile Safari/537.36"></webview>
 		<section class="main"></section>
 		<footer></footer>
 	</div>
