--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
 		<section class="main"></section>
 		<footer></footer>
 	</div>
-		
+
+	<script src="js/titlebar.js"></script>
 	<script>
 		let url = 'http://www.anandtech.com/rss/';
 
@@ -69,7 +70,7 @@
 			}
 		});
 	</script>
-	
+
 </body>
 
 </html>
