Cleaned up the button class

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 <body>
 	<div class="container">
 		<div id="title-bar">
-			<button class="clean-gray" onclick="refreshFeed()">Refresh</button>
-			<button class="clean-gray" onclick="addNewFeed()">Add Feed</button>
+			<button onclick="refreshFeed()">Refresh</button>
+			<button onclick="showAddDialog()">Add Feed</button>
 
 			<div id="add-dialog">
 				<input id="feed-input" type="url">
@@ -73,5 +73,4 @@
 	</script>
 
 </body>
-
 </html>
